--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "website",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "cloud9carousel",
+  "version": "2.2.0",
+  "description": "3D perspective carousel for jQuery/Zepto with a focus on performance",
+  "main": "jquery.cloud9carousel.js",
   "scripts": {
     "start": "cd backend && nodemon server.js",
     "lint": "eslint",
@@ -10,29 +10,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phy5prt/MyPersonalWebsite.git"
+    "url": "specious/cloud9carousel"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/phy5prt/MyPersonalWebsite/issues"
-  },
-  "homepage": "https://github.com/phy5prt/MyPersonalWebsite#readme",
+  "author": "Ildar Sagdejev <specious@gmail.com> (http://specious.github.io/)",
+  "license": "MIT",
+  "bugs": "https://github.com/specious/cloud9carousel/issues",
+  "homepage": "http://specious.github.io/cloud9carousel/",
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "mongoose": "^5.6.5",
-    "nodemon": "^1.19.1"
+    "jquery": ">=1.3",
+    "mongoose": "^5.6.9"
   },
-
-
-  "name": "cloud9carousel",
-  "version": "2.2.0",
   "title": "Cloud 9 Carousel",
-  "description": "3D perspective carousel for jQuery/Zepto with a focus on performance",
-  "homepage": "http://specious.github.io/cloud9carousel/",
-  "license": "MIT",
   "keywords": [
     "jquery-plugin",
     "zepto-plugin",
@@ -41,17 +32,7 @@
     "ecosystem:jquery",
     "ecosystem:zepto"
   ],
-  "author": "Ildar Sagdejev <specious@gmail.com> (http://specious.github.io/)",
   "contributors": [
     "Raffaele Cecco (http://www.professorcloud.com/)"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "specious/cloud9carousel"
-  },
-  "bugs": "https://github.com/specious/cloud9carousel/issues",
-  "dependencies": {
-    "jquery": ">=1.3"
-  },
-  "main": "jquery.cloud9carousel.js"
+  ]
 }
