--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   ],
   "contributors": [
     "Raffaele Cecco (http://www.professorcloud.com/)"
-  ]
+  ],
+  "devDependencies": {
+    "stylelint": "^11.0.0",
+    "stylelint-config-standard": "^19.0.0"
+  }
 }
