--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
+    "envdot": "0.0.3",
     "express": "^4.17.1",
     "jquery": ">=1.3",
     "mongoose": "^5.6.9"
