--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "homepage": "http://specious.github.io/cloud9carousel/",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "ejs": "^2.6.2",
+    "ejs": "^2.7.4",
     "envdot": "0.0.3",
     "express": "^4.17.1",
     "jquery": ">=1.3",
-    "mongoose": "^5.6.9"
+    "mongoose": "^5.7.12"
   },
   "title": "Cloud 9 Carousel",
   "keywords": [
@@ -37,7 +37,10 @@
     "Raffaele Cecco (http://www.professorcloud.com/)"
   ],
   "devDependencies": {
-    "stylelint": "^11.0.0",
+    "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0"
+  },
+  "engine": {
+    "node": "10.16.0"
   }
 }
